# GraphRagInterview

./: .dockerignore  .env.example  .gitignore  README.md  chat-snapshot.md  console-log.txt  console2.txt  docker-compose.yml  mckinsey-skill.json  mtp-click.md  nist-after-fix.md  nist-click.md  package.json  pnpm-lock.yaml  pyproject.toml  trace-loaded.md  trace-page.md
apps/backend/: Dockerfile  pyproject.toml
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: routes_chat.py  routes_documents.py  routes_ontology.py  routes_skills.py  routes_traces.py
apps/backend/app/core/: __init__.py  auth.py  config.py  tracing.py
apps/backend/app/models/: schemas.py
apps/backend/app/rag/: answerer.py  model_policy.py  prompts.py  router.py  usage.py
apps/backend/app/services/: chat.py  embeddings.py  ingestion.py  neo4j_repository.py  parsing.py  repository.py  reranking.py  skills.py  smoke.py  store.py
apps/backend/scripts/: manual_endpoint_smoke.py
apps/backend/tests/unit/: test_answer_streaming.py  test_config.py  test_embeddings_and_parsing.py  test_health.py  test_phase1_api.py  test_rag_prompts.py  test_repository.py  test_router.py
apps/frontend/: Dockerfile  eslint.config.mjs  package.json  tsconfig.tsbuildinfo  vitest.config.ts
deploy/cloudrun/: backend.env.yaml.example  backend.secrets.example  cloudbuild.backend.yaml  cloudbuild.frontend.yaml  frontend.build.env.example  frontend.env.yaml.example
docs/: backend-endpoint-test-guide.md  cloud-run-week-demo.md
docs/roadmap/: 5-phase-delivery-plan.md  (+1 more)
scripts/: deploy-cloudrun.sh
(+23 files in other folders)
